@@ -1,5 +1,6 @@
 2005-10-21:
-    * Changed the default value for sessionFilter.locking from "implicit" to "explicit"
+    * CherryPy-2.1.0 released
+    * Changed the default value for sessionFilter.locking from "implicit" to "explicit" (remi)
 
 2005-10-06:
     * CherryPy-2.1.0-rc2 released
